# euler

./: LICENSE  Problems.cabal  stack.yaml
app/: Main.hs
src/: Problems.hs
