name:                Problems
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/davidm-d/Problems#readme
license:             BSD3
license-file:        LICENSE
author:              David Millar-Durrant
maintainer:          dmillardurrant@gmail.com
copyright:           MIT License
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Problems
  build-depends:       base >= 4.7 && < 5
                     , ghc
                     , vector
  default-language:    Haskell2010

executable Problems-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Problems
  default-language:    Haskell2010

test-suite Problems-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Problems
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/davidm-d/Problems
